Make consistent margins and fix overflow bug

--- a/src/Styles/CardContainer.scss
+++ b/src/Styles/CardContainer.scss
@@ -3,6 +3,6 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 100px;
   grid-auto-rows: minmax(100px, auto);
-  margin: 0% 8% 0% 8%;
-  overflow: hidden;
+  margin: 0% 15% 0% 15%;
+  overflow: visible;
 }
