--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -2,9 +2,9 @@ h1 {
   font-family: 'Cutive Mono',
     serif;
   margin-top: 5%;
-  margin-left: 20%;
+  margin-left: 15%;
   margin-bottom: 5%;
-  margin-right: 22%;
+  margin-right: 15%;
   font-size: 300%;
   border-bottom: 1px solid grey;
   padding-bottom: 2%;
