--- a/src/Styles/SectionButtons.scss
+++ b/src/Styles/SectionButtons.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   justify-content: space-between;
-  margin: 0% 20% 5% 20%;
+  margin: 0% 15% 5% 15%;
 }
 
 .button-border-business {
